--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
 
 <body>
   <!-- Navbar Start -->
-  <nav class="navbar navbar-expand-md fixed-top">
+  <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <!-- Brand -->
       <a class="navbar-brand" href="index.html">shala app</a>
       <!-- Toggler/collapsibe Button -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
+        <i class="fas fa-bars"></i>
       </button>
 
       <!-- Navbar links -->
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="#">home</a>
+            <a class="nav-link active" data-scroll-nav="0" href="#">home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">features</a>
+            <a class="nav-link" data-scroll-nav="1" href="#">features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">screenshots</a>
+            <a class="nav-link" data-scroll-nav="2" href="#">screenshots</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">testimonials</a>
+            <a class="nav-link" data-scroll-nav="4" href="#">testimonials</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">pricing</a>
+            <a class="nav-link" data-scroll-nav=5" href="#">pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">contact</a>
+            <a class="nav-link" data-scroll-nav="6" href="#">contact</a>
           </li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
   <!-- Navbar End -->
 
   <!-- Home Section Start -->
-  <section class="home d-flex align-items-center">
+  <section class="home d-flex align-items-center" id="home" data-scroll-index="0">
     <div class="effect-wrap">
       <i class="fas fa-plus effect effect-1"></i>
       <i class="fas fa-plus effect effect-2"></i>
@@ -62,7 +62,7 @@
     </div>
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-7 col-md-7">
+        <div class="col-md-7">
           <div class="home-text">
             <h1>Best Mobile App Template for your Business</h1>
             <p>
@@ -72,14 +72,14 @@
               recusandae cupiditate. Eaque, fugiat.
             </p>
             <div class="home-btn">
-              <a href="#" class="btn btn-1">download app</a>
+              <a href="#" data-scroll-goto="3" class="btn btn-1">download app</a>
               <button type="button" class="btn btn-1 video-play-btn">
                 <i class="fas fa-play"></i>
               </button>
             </div>
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 text-center">
+        <div class="col-md-5 text-center">
           <div class="home-img">
             <div class="circle"></div>
             <img src="img/app-screenshots/1.png" alt="shala app" />
@@ -91,7 +91,7 @@
   <!-- Home Section End -->
 
   <!-- Features Section Start -->
-  <section class="features section-padding">
+  <section class="features section-padding" id="features" data-scroll-index="1">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
@@ -193,7 +193,7 @@
   <!-- Fun Facts Section End -->
 
   <!-- App Screenshots Section Start -->
-  <section class="app-screenshots section-padding">
+  <section class="app-screenshots section-padding" id="screenshots" data-scroll-index="2">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
@@ -226,7 +226,7 @@
   <!-- App Screenshots Section End -->
 
   <!-- App Download Section Start -->
-  <section class="app-download section-padding">
+  <section class="app-download section-padding" data-scroll-index="3">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
@@ -317,7 +317,7 @@
   <!-- How It Works Section End -->
 
   <!-- Testimonials Section Start -->
-  <section class="testimonials section-padding">
+  <section class="testimonials section-padding" id="testimonials" data-scroll-index="4">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
@@ -404,7 +404,7 @@
   <!-- Testimonials Section End -->
 
   <!-- Pricing Plan Section Start -->
-  <section class="pricing section-padding">
+  <section class="pricing section-padding" id="pricing" data data-scroll-index="5">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
@@ -413,7 +413,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-lg-4 col-md-6">
           <div class="pricing-plan">
             <div class="pricing-header">
@@ -491,8 +491,251 @@
   </section>
   <!-- Pricing Plan Section End -->
 
-<!-- Team Section Start -->
-<!-- Team Section End -->
+  <!-- Team Section Start -->
+  <section class="team section-padding">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <div class="section-title">
+            <h2>team <span>member</span></h2>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="owl-carousel team-carousel">
+          <div class="team-item">
+            <img src="img/team/1.jpg" alt="team">
+            <h3>john doe</h3>
+            <span>UI designer</span>
+          </div>
+          <div class="team-item">
+            <img src="img/team/2.jpg" alt="team">
+            <h3>john doe</h3>
+            <span>UI designer</span>
+          </div>
+          <div class="team-item">
+            <img src="img/team/3.jpg" alt="team">
+            <h3>john doe</h3>
+            <span>UI designer</span>
+          </div>
+          <div class="team-item">
+            <img src="img/team/4.jpg" alt="team">
+            <h3>john doe</h3>
+            <span>UI designer</span>
+          </div>
+          <div class="team-item">
+            <img src="img/team/5.jpg" alt="team">
+            <h3>john doe</h3>
+            <span>UI designer</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Team Section End -->
+
+  <!-- Faq Section Start -->
+  <section class="faq section-padding">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <div class="section-title">
+            <h2>frequently <span>asked</span> queries</h2>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-10">
+          <div id="accordion">
+            <div class="accordion-item">
+              <div class="accordion-header" data-toggle="collapse" data-target="#collapse-01">
+                <h3>100% Fluid Responsive - Fits any device perfectly</h3>
+              </div>
+              <div class="collapse show" id="collapse-01" data-parent="#accordion">
+                <div class="accordion-body">
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero quod quae vitae eveniet delectus
+                    voluptatem pariatur blanditiis impedit ratione minus ipsa, eos repellendus dolorem placeat aliquam
+                    obcaecati ut voluptate natus.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <div class="accordion-header" data-toggle="collapse" data-target="#collapse-02">
+                <h3>Clean Code</h3>
+              </div>
+              <div class="collapse" id="collapse-02" data-parent="#accordion">
+                <div class="accordion-body">
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero quod quae vitae eveniet delectus
+                    voluptatem pariatur blanditiis impedit ratione minus ipsa, eos repellendus dolorem placeat aliquam
+                    obcaecati ut voluptate natus.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <div class="accordion-header" data-toggle="collapse" data-target="#collapse-03">
+                <h3>Flat, modern and clean design</h3>
+              </div>
+              <div class="collapse" id="collapse-03" data-parent="#accordion">
+                <div class="accordion-body">
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero quod quae vitae eveniet delectus
+                    voluptatem pariatur blanditiis impedit ratione minus ipsa, eos repellendus dolorem placeat aliquam
+                    obcaecati ut voluptate natus.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <div class="accordion-header" data-toggle="collapse" data-target="#collapse-04">
+                <h3>custom font support</h3>
+              </div>
+              <div class="collapse" id="collapse-04" data-parent="#accordion">
+                <div class="accordion-body">
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero quod quae vitae eveniet delectus
+                    voluptatem pariatur blanditiis impedit ratione minus ipsa, eos repellendus dolorem placeat aliquam
+                    obcaecati ut voluptate natus.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Faq Section End -->
+
+  <!-- Contact Section Start -->
+  <section class="contact section-padding" data-scroll-index="6">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <div class="section-title">
+            <h2>get in <span>touch</span></h2>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-5">
+          <div class="contact-info">
+            <h3>For Any Queries and Support</h3>
+            <div class="contact-info-item">
+              <i class="fas fa-location-arrow"></i>
+              <h4>Company Location</h4>
+              <p>199 xyz gali, New Delhi</p>
+            </div>
+            <div class="contact-info-item">
+              <i class="fas fa-envelope"></i>
+              <h4>Write to us at</h4>
+              <p>info@gmail.com</p>
+            </div>
+            <div class="contact-info-item">
+              <i class="fas fa-phone"></i>
+              <h4>Call us on</h4>
+              <p>12 1234 5678</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-8 col-md-7">
+          <div class="contact-form">
+            <form>
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="form-group">
+                    <input type="text" placeholder="Your Name" class="form-control">
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="form-group">
+                    <input type="text" placeholder="Your Email" class="form-control">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <input type="text" placeholder="Your Phone" class="form-control">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <input type="text" placeholder="Subject" class="form-control">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <textarea placeholder="Your Message" class="form-control"></textarea>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-12">
+                  <button type="submit" class="btn btn-2">Send Message</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Contact Section End -->
+
+  <!-- Footer Start -->
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-md-6">
+          <div class="footer-col">
+            <h3>About Us</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis amet magnam perspiciatis molestias
+              aspernatur ab itaque assumenda.</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="footer-col">
+            <h3>company</h3>
+            <ul>
+              <li><a href="#">privacy policy</a></li>
+              <li><a href="#">term & condition</a></li>
+              <li><a href="#">lates blogs</a></li>
+              <li><a href="#">app services</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="footer-col">
+            <h3>quick links</h3>
+            <ul>
+              <li><a href="#home">home</a></li>
+              <li><a href="#features">features</a></li>
+              <li><a href="#screenshots">screenshots</a></li>
+              <li><a href="#pricing">pricing</a></li>
+              <li><a href="#testimonials">testimonials</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="footer-col">
+            <h3>social pages</h3>
+            <ul>
+              <li><a href="#">facebook</a></li>
+              <li><a href="#">twitter<</a></li>
+              <li><a href="#">instagram</a></li>
+              <li><a href="#">linkedin</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <p class="copyright-text">&copy;2021 @The WebShala</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- Footer End -->  
 
   <!-- Video Popup Start -->
   <div class="video-popup">
