--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 </head>
 
 <body>
+
+<!-- Preloader Start -->
+<div class="preloader">
+  <span></span>
+</div>
+<!-- Preloader End -->
+
+
+
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
@@ -404,7 +413,7 @@
   <!-- Testimonials Section End -->
 
   <!-- Pricing Plan Section Start -->
-  <section class="pricing section-padding" id="pricing" data data-scroll-index="5">
+  <section class="pricing section-padding" id="pricing" data-scroll-index="5">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
@@ -736,6 +745,12 @@
     </div>
   </footer>
   <!-- Footer End -->  
+
+  <!-- Toggle Theme Start - Light and Dark Mode -->
+  <div class="toggle-theme">
+    <i class="fas"></i>
+  </div>
+  <!-- Toggle Theme End -->
 
   <!-- Video Popup Start -->
   <div class="video-popup">
