--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
             <h3>social pages</h3>
             <ul>
               <li><a href="#">facebook</a></li>
-              <li><a href="#">twitter<</a></li>
+              <li><a href="#">twitter</a></li>
               <li><a href="#">instagram</a></li>
               <li><a href="#">linkedin</a></li>
             </ul>
